@@ -1,8 +1,9 @@
-Changes in QMPlay2 build 15.09.28:
+Changes in QMPlay2 build 15.10.03:
 	- user can hide menu bar by pressing Alt+Ctrl+M or from "Widgets" context menu,
 	- minimum and maximum frequency in equalizer can be changed,
 	- basic WebVTT subtitles support (SRT module),
 	- added preamp and dB tooltip to equalizer,
+	- fixed possible deadlock in AudioCD,
 	- small bugfix,
 
 Changes in QMPlay2 build 15.08.12:
